--- a/assets/AssetManifest.json
+++ b/assets/AssetManifest.json
@@ -1,1 +1,1 @@
-{"assets/images/favicon.png":["assets/images/favicon.png"],"assets/images/icon.png":["assets/images/icon.png"],"assets/lottie/rocket.json":["assets/lottie/rocket.json"],"packages/cupertino_icons/assets/CupertinoIcons.ttf":["packages/cupertino_icons/assets/CupertinoIcons.ttf"]}
+{"assets/images/icon.png":["assets/images/icon.png"],"assets/lottie/rocket.json":["assets/lottie/rocket.json"],"packages/cupertino_icons/assets/CupertinoIcons.ttf":["packages/cupertino_icons/assets/CupertinoIcons.ttf"]}
